Updates to Sections 4.1 and 4.2.

--- a/biblio.bib
+++ b/biblio.bib
@@ -2942,7 +2942,7 @@ year={2008},
 pages={23-30}, 
 },
 
-@INPROCEEDINGS{Juve2013,
+@article{Juve2013,
 	title = "Characterizing and profiling scientific workflows ",
 	journal = "Future Generation Computer Systems ",
 	volume = "29",
@@ -3063,3 +3063,9 @@ pages={23-30},
         doi = {10.1016/j.future.2014.10.008},
         author = {Deelman, Ewa and Vahi, Karan and Juve, Gideon and Rynge, Mats and Callaghan, Scott and Maechling, Phil J. and Mayani, Rajiv and Chen, Weiwei and Ferreira da Silva, Rafael and Livny, Miron and Wenger, Kent}
 }
+
+@misc{WorkflowArchive,
+    key = {{Workflow Archive}},
+    title = {{Workflow Archive}},
+    howpublished = {\url{http://workflowarchive.org}}
+},
