--- a/ftc.tex
+++ b/ftc.tex
@@ -1126,14 +1126,21 @@ CyberShake workflow (originally of about 23 seconds, Table~\ref{tab:evaluation-w
 a multiplier factor $f_r \in [0.5, 1.3]$. We also vary the average system overheads (originally of about 50 
 seconds) by using a multiplier factor $f_o \in [0.2, 1.8]$.  
 
-Experiment 3 evaluates the performance of the static and dynamic estimation. In the static estimation 
-process, only the prior knowledge \rev{(shape and scale parameters of a Inverse-Gamma distribution for the inter-arrival failures, and a Gamma distribution for the task runtime and system overhead) } is used to estimate the MLEs of the unknown parameters \rev{(scales parameters of the inter-arrival failures $\theta_\gamma$, the task runtime $\theta_t$, and the system overhead $\theta_s$)}. In contrast,
-the dynamic estimation process leverages the runtime data collected during the execution and update 
-the MLEs respectively. 
+Experiment 3 evaluates the performance of the static and dynamic estimation. 
+In the static estimation process, only the prior knowledge \rev{(shape and scale 
+parameters of a Inverse-Gamma distribution for the inter-arrival time of failures, and a 
+Gamma distribution for the task runtime and system overhead) } is used to estimate 
+the MLEs of the unknown parameters \rev{(scales parameters of the inter-arrival 
+failures $\theta_\gamma$, the task runtime $\theta_t$, and the system overhead 
+$\theta_s$)}. In contrast, the dynamic estimation process leverages the runtime 
+data collected during the execution and update the MLEs respectively. 
 
-The experiments use two sets of the $\theta_{\gamma}$ function. The first is a step function 
-(Fig.~\ref{fig:evaluation_step_signal}), in which $\theta_{\gamma}$ is decreased from 500 seconds 
-to 50 seconds at time $T_d$. The step function of $\theta_{\gamma}$ at time $t_c$ is defined as follows:
+\vspace{5pt}
+\noindent \textbf{\rev{Inter-arrival Time of Failures Function ($\theta_\gamma(t)$)}.}
+The experiments use two sets of the $\theta_{\gamma}$ function. The first is a step 
+function (Fig.~\ref{fig:evaluation_step_signal}), in which $\theta_{\gamma}$ is 
+decreased from 500 seconds to 50 seconds at time $T_d$. The step function of 
+$\theta_{\gamma}$ at time $t_c$ is defined as follows:
 
 \begin{equation}
 	\label{eq:step_function}
@@ -1150,11 +1157,12 @@ the less the re-clustering is influenced by the estimation error, and thus the s
 is. There is one special case when $T_d\to 0$, which means the prior knowledge is wrong at the very 
 beginning.
 
-\begin{figure}[!htb]
+\begin{figure}[!t]
 	\centering
 	\includegraphics[width=0.8\linewidth]{step_signal.pdf} \\
 	\caption{A Step Function of $\theta_{\gamma}$. $t_c$ is the current time and $T_d$ is the moment $\theta_{\gamma}$ changes from 500 to 50 seconds.}
 	\label{fig:evaluation_step_signal}
+	\vspace{-15pt}
 \end{figure}
 
 The second function is a pulse wave function (Fig. \ref{fig:evaluation_pulse_signal}) in which the 
@@ -1175,7 +1183,7 @@ failure traces obtained from production distributed systems. In this work, we va
 1,000 seconds to 10,000 seconds based on the estimation of the workflow's makespan, and 
 $\tau$ from $0.1T_c$ to $0.5T_c$. 
 
-\begin{figure}[!htb]
+\begin{figure}[!t]
 	\centering
 	\includegraphics[width=0.8\linewidth]{pulse_signal.pdf} \\
 	\caption{A Pulse Function of $\theta_{\gamma}$. $t_c$ is the current time and $T_c$ is the period of the wave. $\tau$ is the width of the pulse.}
