Updates to Section 4.3.

--- a/answers.tex
+++ b/answers.tex
@@ -127,7 +127,7 @@ I'd like to see more description on the workflow execution traces instead of jus
 The experiments are conducted against five different workflows. I'd like to see some generic comparison of these workflows. That is, what algorithms are good for what kind of workflow. A summary would be good at the end of the experimental results.
 \end{review}
 
-\answer{\todo{}}
+\answer{The Dynamic Reclustering algorithm outperforms most of the methods for the 5 workflow applications, however, it yields poorer performance when the workflow structure is mostly composed of pipelines and very short runtime tasks (e.g., Epigenomics workflow). We added a paragraph to the end of the experiments section to summarize the experimental results.}
 
 
 
