Updated answers letter.

--- a/answers.tex
+++ b/answers.tex
@@ -61,7 +61,7 @@ While Pegasus represents one good use case for this work, there are other system
 Regarding the analysis, the paper uses mostly the makespan (a definition would be also good) for drawing the conclusions. I consider there are other important metrics to analyze for such strategies, especially from a scheduling point of view, otherwise the analysis seems geared towards achieving users' objectives without taking in consideration resource utilization or other objectives.
 \end{review}
 
-\answer{\todo{}}
+\answer{We added a definition of makespan to the introduction section of the paper. \todo{}}
 
 
 
