--- a/ftc.tex
+++ b/ftc.tex
@@ -209,8 +209,9 @@ on two real scientific workflows. In this work, we \rev{extend our } previous wo
 existing task clustering technique on a larger set of workflows (five widely used scientific 
 applications); 2) the performance impact of the variance of the distribution of the 
 task runtimes, the system overheads, and the inter-arrival time of failures on the workflow's 
-makespan; and 3) the performance impact of dynamic and static failure estimations 
-with variation of the inter-arrival time of failures on the workflow's execution.
+makespan \rev{(time between the start and finish of all workflow tasks)}; and 3) the performance 
+impact of dynamic and static failure estimations with variation of the inter-arrival time of failures 
+on the workflow's execution.
 
 The rest of this manuscript is organized as follows. Section~\ref{sec:related} gives 
 an overview of the related work. Section~\ref{sec:models} presents our workflow and 
